# uBase

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  ORI(1).c  ORI.c  bibliotecaAlocacao.c  bibliotecaAlocacao.h  bibliotecaCompactacao.c  bibliotecaCompactacao.h  bibliotecaCompactar_lz78  bibliotecaCompactar_lz78.c  bibliotecaCompactar_lz78.h  bibliotecaCriar.c  bibliotecaCriar.h  bibliotecaDescompactacao.c  bibliotecaDescompactacao.h  bibliotecaOperacoes.c  bibliotecaOperacoes.h  bibliotecaRemover.c  bibliotecaRemover.h  bibliotecaStrings.c  bibliotecaStrings.h  compactar.c  compactar.h  compactar_lz78  compactar_lz78.h  criar.c  criar.h  descompactar.c  descompactar.h  fptrCompactar.h  help.c  help.h  huffman.c  huffman.h  includes.h  indexsecundaria.c  indexsecundaria.h  inserir.c  inserir.h  insert_teste.c  interpretar.c  (+13 more)
src/functions/: criar.c  help.h  interpretar.h
